# migraven-openfang-mvp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs
docs/: ARCHITECTURE.md  GUARDRAILS.md  SETUP.md  TOOL_CATALOG.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChatMessageView.tsx  ToolStep.tsx
frontend/src/lib/: openfang-api.ts
frontend/src/pages/: ChatPage.tsx
openfang/: config.toml
openfang/agents/ad-auditor/: SYSTEM_PROMPT.md  agent.toml
openfang/agents/report-writer/: SYSTEM_PROMPT.md  agent.toml
runtime/: Cargo.toml
runtime/src/: agent.rs  anthropic.rs  credentials.rs  foundry.rs  loop_runner.rs  main.rs  server.rs  skill.rs  types.rs
scripts/: install.ps1  run-all.ps1  start-openfang.ps1  start-runtime.ps1  test-skill.ps1
skills/migraven-ad/: package-lock.json  package.json  skill.toml  tsconfig.json
skills/migraven-ad/src/: credentials.ts  index.ts  models.ts  neo4j-client.ts  schema.ts  security-queries.ts  token-budget.ts
skills/migraven-ad/src/tools/: assign_owner_to_rule.ts  audit_security.ts  batch_queries.ts  count_matching_objects.ts  enumerate_rule_matches.ts  execute_cypher.ts  get_ownership_coverage.ts  propose_ownership_clusters.ts  save_ownership_rule.ts  search_fulltext.ts  update_todos.ts
