[package]
name = "migraven-runtime"
version = "0.1.0"
edition = "2021"
publish = false
description = "Native Rust runtime for the migRaven AD-Auditor MVP. OpenAI-compatible API + ReAct loop + Node skill subprocess."

[dependencies]
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "io-std", "io-util", "signal", "process", "fs"] }
tokio-stream = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4"] }
once_cell = "1.20"
dotenvy = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
] }

[[bin]]
name = "migraven-runtime"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
